--- a/.project
+++ b/.project
@@ -21,4 +21,15 @@
 			<location>C:/Users/user/Downloads/WordTreeSymbols.txt</location>
 		</link>
 	</linkedResources>
+	<filteredResources>
+		<filter>
+			<id>1736339167144</id>
+			<name></name>
+			<type>30</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>node_modules|\.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
